src/test/ui/parser/use-ends-with-mod-sep.stderr
error: expected identifier, found `;`
  --> $DIR/use-ends-with-mod-sep.rs:3:15
   |
LL | use std::any::; //~ ERROR expected identifier, found `;`
   |               ^ expected identifier

error: aborting due to previous error

